<resources>
    <integer-array name="img_id_arr">
        <item>@drawable/ic_insert_emoticon_black_24dp</item>
        <item>@drawable/ic_launcher_background</item>
        <item>@drawable/ic_launcher_foreground</item>
        <item>@drawable/ic_insert_emoticon_black_24dp</item>
    </integer-array>
    <string name="etx_username">Username</string>
    <string name="etx_password">Password</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_contact_us">Conect Us</string>

    <string name="app_name">BillApplication</string>
    <string name="btn_how_to_add_items">How to add items?</string>
    <string name="quetion_add_item">You have to go Add item tile for add new item</string>
    <string name="chech_user_setting">How to check user Setting</string>
    <string name="How_check_user_setting">You have to go in user setting tile for check user setting</string>
    <string name="pref_file">com.abc.preference_file</string>
    <string name="pref_user_name">com.abc.preference_user_name</string>


</resources>
