<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimens20dp">
        <Button
            android:id="@+id/btn_add_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_how_to_add_items"
            android:textAllCaps="false"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="@dimen/dimens18sp"
            android:drawableStart="@drawable/ic_add_icon"
            android:textColor="@color/white_color"
            android:background="@drawable/round_button_for_help"
            android:drawableLeft="@drawable/ic_add_icon" />
        <TextView
            android:id="@+id/txt_how_add_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="@dimen/dimens10dp"
            android:text="@string/quetion_add_item"
            android:textSize="@dimen/dimens14sp"
            android:visibility="gone"
            android:layout_marginRight="16dp"/>
        <Button
            android:layout_marginTop="@dimen/dimens10dp"
            android:id="@+id/btn_see_user_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chech_user_setting"
            android:textAllCaps="false"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="@dimen/dimens18sp"
            android:drawableStart="@drawable/ic_add_icon"
            android:textColor="@color/white_color"
            android:background="@drawable/round_button_for_help"
            android:drawableLeft="@drawable/ic_add_icon" />
        <TextView
            android:id="@+id/txt_how_check_user_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="@dimen/dimens10dp"
            android:text="@string/How_check_user_setting"
            android:textSize="@dimen/dimens14sp"
            android:visibility="gone"
            android:layout_marginRight="16dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>